--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,6 +3,9 @@
 <%= link_to "About", about_path %>
 <%= link_to "New Topic", new_topic_path %>
 
+<%= sort_link(@q, :create_at, 'Create At', default_order: :desc) %>
+<%= sort_link(@q, :comment_count, 'Comments', default_order: :desc) %>
+
 <table>
   <tr>
     <th>Topic</th>
