--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,6 +6,11 @@
 <%= sort_link(@q, :create_at, 'Create At', default_order: :desc) %>
 <%= sort_link(@q, :comment_count, 'Comments', default_order: :desc) %>
 
+<% Category.all.each do |c| %>
+  <%= link_to c.name, topics_path( :cid => c.id ) %>
+<% end %>
+<%= link_to "All", topics_path %>
+
 <table>
   <tr>
     <th>Topic</th>
