--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,10 +4,18 @@
 
 <p><%= @topic.user.try(:display_name) %></p>
 
+<% if @topic.can_delete_by?(current_user) %>
+  <p><%= link_to "Delete Topic", topic_path(@topic), :method => :delete %></p>
+<% end %>
+
 <h2>Comments</h2>
 
 <% @topic.comments.each do |comment| %>
-  <p><%= comment.content %> by <%= coment.user.try(:display_name) %></p>
+  <p><%= comment.content %> by <%= coment.user.try(:display_name) %>
+  <% if comment.can_delete_by?(current_user) %>
+    <%= link_to "(Delete)", topic_comment_path(@topic, comment), :method => :delete %>
+  <% end %>
+  </p>
 <% end %>
 
 <h2>New Comment</h2>
